# PARI_FinalProject

./: README.md
PF/: CMakeLists.txt
PF/doc/: Doxyfile.in  mainpage.dox
PF/src/Rs232GTK/: callbacks.c  int_grafica.glade  int_grafica.glade~  main.c  myf.c  myf.h  prototypes.h
PF/srcmyutils/: myutils.h
